--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mega-sena-vercel",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "vercel dev"
   },
